# blog

./: .gitignore  Makefile  README.md  pyproject.toml
accounts/: admin.py  apps.py  urls.py
accounts/forms/: __init__.py  registration.py  users.py
accounts/migrations/: 0001_initial.py
accounts/models/: __init__.py  managers.py  profiles.py  register_token.py  users.py
accounts/templates/email/: base_email.html  first_login.html  verify_email.html
accounts/templates/registration/: email_request.html  login.html
accounts/templates/users/: create.html
accounts/views/: __init__.py  registration.py  users.py
config/: settings.py  urls.py
core/: urls.py  views.py
core/templates/: 404.html  500.html  base.html  messages.html
core/templates/pages/: index.html
utils/admin/: actions.py
utils/database/: __init__.py  storage.py  validators.py
utils/emailing/: __init__.py  builders.py  models.py  on_commit.py  sender.py  settings.py  texts.py
